Los botones cambian de color

--- a/app/src/main/res/layout/activity_portada.xml
+++ b/app/src/main/res/layout/activity_portada.xml
@@ -41,6 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="Informacion"
+        android:background="@drawable/b_encendido"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageView"
