--- a/app/src/main/res/drawable/b_correcto.xml
+++ b/app/src/main/res/drawable/b_correcto.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#64dd17"></solid>
+    <solid android:color="#fff"></solid>
     <corners android:radius="10dp"></corners>
-    <stroke android:color="#fff" android:width="1dp"></stroke>
+    <stroke android:color="#8BC34A" android:width="3dp"></stroke>
 
 </shape>
