--- a/app/src/main/res/drawable/b_puntos.xml
+++ b/app/src/main/res/drawable/b_puntos.xml
@@ -3,6 +3,6 @@
 
     <solid android:color="#fff"></solid>
     <corners android:radius="10dp"></corners>
-    <stroke android:color="#8e24aa" android:width="3dp"></stroke>
+    <stroke android:color="#9C27B0" android:width="3dp"></stroke>
 
 </shape>
