--- a/app/src/main/res/drawable/b_vida.xml
+++ b/app/src/main/res/drawable/b_vida.xml
@@ -3,6 +3,6 @@
 
     <solid android:color="#fff"></solid>
     <corners android:radius="10dp"></corners>
-    <stroke android:color="#E91E63" android:width="3dp"></stroke>
+    <stroke android:color="#2196F3" android:width="3dp"></stroke>
 
 </shape>
