--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/btn_redondo"
+        android:background="@drawable/b_encendido"
         android:text="Relaciona las columnas"
         android:textColor="#000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -183,6 +183,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/b_puntos"
         android:text="Puntos: 0"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView9"
         app:layout_constraintStart_toStartOf="parent" />
@@ -195,6 +196,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/b_vida"
         android:text="Vidas: 0"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView9" />
