--- a/app/src/main/res/layout/activity_segunda_actividad.xml
+++ b/app/src/main/res/layout/activity_segunda_actividad.xml
@@ -9,33 +9,35 @@
 
     <Button
         android:id="@+id/bFin"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@drawable/btn_redondo"
         android:gravity="center"
-        android:text="Fin del juego"
-        android:textColor="#000"
-        android:textSize="22dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></Button>
-
-    <TextView
-        android:id="@+id/TuPuntuacion"
-        android:layout_width="200dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/b_puntos"
-        android:gravity="center"
-        android:text="Tu puntuación: XX"
-        android:textColor="#000"
+        android:text="  Continuar  "
+        android:textAllCaps="false"
+        android:textColor="#fff"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bFin"></TextView>
+        app:layout_constraintTop_toBottomOf="@+id/TuPuntuacion"></Button>
+
+    <TextView
+        android:id="@+id/TuPuntuacion"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/b_puntos"
+        android:gravity="center"
+        android:text="Tu puntuación: XX"
+        android:textAllCaps="false"
+        android:textColor="#000"
+        android:textSize="22dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></TextView>
 
 
 </android.support.constraint.ConstraintLayout>
