--- a/app/src/main/res/layout/activity_segunda_actividad.xml
+++ b/app/src/main/res/layout/activity_segunda_actividad.xml
@@ -11,7 +11,7 @@
         android:id="@+id/bFin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:background="@drawable/btn_redondo"
         android:gravity="center"
         android:text="  Continuar  "
@@ -25,12 +25,11 @@
 
     <TextView
         android:id="@+id/TuPuntuacion"
-        android:layout_width="300dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:background="@drawable/b_puntos"
         android:gravity="center"
-        android:text="Tu puntuación: XX"
+        android:text="Puntuación: 00"
         android:textAllCaps="false"
         android:textColor="#000"
         android:textSize="22dp"
