--- a/app/src/main/res/layout/activity_segunda_actividad.xml
+++ b/app/src/main/res/layout/activity_segunda_actividad.xml
@@ -11,7 +11,7 @@
         android:id="@+id/bFin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/btn_redondo"
         android:gravity="center"
         android:text="  Continuar  "
@@ -19,9 +19,8 @@
         android:textColor="#fff"
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/TuPuntuacion"></Button>
+        app:layout_constraintTop_toBottomOf="@+id/TuRecord"></Button>
 
     <TextView
         android:id="@+id/TuPuntuacion"
@@ -37,6 +36,20 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></TextView>
+
+    <TextView
+        android:id="@+id/TuRecord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="Record"
+        android:textColor="#000"
+        android:textSize="22dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TuPuntuacion" />
 
 
 </android.support.constraint.ConstraintLayout>
