Icono en activity lista estados

--- a/app/src/main/res/layout/activity_portada.xml
+++ b/app/src/main/res/layout/activity_portada.xml
@@ -40,8 +40,10 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Informacion"
-        android:background="@drawable/b_encendido"
+        android:text="Información"
+        android:background="@drawable/btn_redondo"
+        android:textColor="#fff"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/imageView"
