--- a/app/src/main/res/layout/activity_portada.xml
+++ b/app/src/main/res/layout/activity_portada.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/bjugar" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/botonInformacion"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
