--- a/app/src/main/res/layout/activity_informacion.xml
+++ b/app/src/main/res/layout/activity_informacion.xml
@@ -5,40 +5,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Informacion"
-    android:orientation="vertical">
+    android:background="#ff9800">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/borde_redondo"
+        android:layout_marginTop="17dp"
+        android:layout_marginBottom="17dp"
+        android:layout_marginRight="17dp"
+        android:layout_marginLeft="17dp">
 
         <ImageView
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:src="@drawable/tec"
             android:layout_gravity="center"
-            android:layout_marginTop="15dp"></ImageView>
+            android:layout_marginTop="40dp"></ImageView>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Donovan"
+            android:text="Donovan Barcena Angeles"
             android:gravity="center"
-            android:textSize="25dp"
-            android:layout_marginTop="15dp"></TextView>
+            android:textSize="22dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="10dp"></TextView>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="David"
+            android:text="David Gomez Delgado"
             android:gravity="center"
-            android:textSize="25dp"></TextView>
-
+            android:textSize="22dp"
+            android:layout_marginBottom="10dp"></TextView>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Francisco"
+            android:text="Francisco Javier Rojo Cordova"
             android:gravity="center"
-            android:textSize="25dp"></TextView>
+            android:textSize="22dp"></TextView>
+        <ImageView
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:src="@drawable/mapache"
+            android:layout_gravity="center"
+            android:layout_marginTop="25dp"></ImageView>
     </LinearLayout>
 
 </RelativeLayout>
